--- a/index.html
+++ b/index.html
@@ -568,22 +568,22 @@
       <nav class="mobile-menu-nav">
         <ul class="nav-list">
           <li class="nav-item">
-            <a href="#numbers" class="nav-link">Цифры</a>
+            <a href="#numbers" class="nav-link js-close-menu">Цифры</a>
           </li>
           <li class="nav-item">
-            <a href="#deals" class="nav-link">Сделки онлайн</a>
+            <a href="#deals" class="nav-link js-close-menu">Сделки онлайн</a>
           </li>
           <li class="nav-item">
-            <a href="#about" class="nav-link">О компании</a>
+            <a href="#about" class="nav-link js-close-menu">О компании</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Как начать</a>
+            <a href="#" class="nav-link js-close-menu">Как начать</a>
           </li>
           <li class="nav-item">
-            <a href="#rates" class="nav-link">Тарифы</a>
+            <a href="#rates" class="nav-link js-close-menu">Тарифы</a>
           </li>
-          <li class="nav-item"><a href="#" class="nav-link">Отзывы</a></li>
-          <li class="nav-item"><a href="#faq" class="nav-link">FAQ</a></li>
+          <li class="nav-item"><a href="#" class="nav-link js-close-menu">Отзывы</a></li>
+          <li class="nav-item"><a href="#faq" class="nav-link js-close-menu">FAQ</a></li>
         </ul>
       </nav>
       <ul class="btns-list">
